unifi/ns_unifi.yml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: unifi
spec: {}
status: {}
