unifi/unifi.yml
---
# Source: unifi/templates/controller-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
  labels:
    app.kubernetes.io/name: unifi
    helm.sh/chart: unifi-0.4.0
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/managed-by: Tiller
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: controller
      protocol: TCP
      name: controller

  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi


---
# Source: unifi/templates/discovery-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: unifi-discovery
  labels:
    app.kubernetes.io/name: unifi
    helm.sh/chart: unifi-0.4.0
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/managed-by: Tiller
spec:
  type: NodePort
  ports:
    - port: 10001
      targetPort: discovery
      protocol: UDP
      name: discovery

  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi


---
# Source: unifi/templates/gui-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: unifi-gui
  labels:
    app.kubernetes.io/name: unifi
    helm.sh/chart: unifi-0.4.0
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/managed-by: Tiller
spec:
  type: ClusterIP
  ports:
    - name: https-gui
      port: 8443
      protocol: TCP
      targetPort: https-gui

  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi


---
# Source: unifi/templates/stun-svc.yaml

apiVersion: v1
kind: Service
metadata:
  name: unifi-stun
  labels:
    app.kubernetes.io/name: unifi
    helm.sh/chart: unifi-0.4.0
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/managed-by: Tiller
spec:
  type: NodePort
  ports:
    - port: 3478
      targetPort: stun
      protocol: UDP
      name: stun

  selector:
    app.kubernetes.io/name: unifi
    app.kubernetes.io/instance: unifi


---
# Source: unifi/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  labels:
    app.kubernetes.io/name: unifi
    helm.sh/chart: unifi-0.4.0
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/managed-by: Tiller
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi
      app.kubernetes.io/instance: unifi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi
        app.kubernetes.io/instance: unifi
    spec:
      containers:
        - name: unifi
          image: "jacobalberty/unifi:stable"
          imagePullPolicy: IfNotPresent
          ports:
            - name: https-gui
              containerPort: 8443
              protocol: TCP
            - name: controller
              containerPort: 8080
              protocol: TCP
            - name: discovery
              containerPort: 10001
              protocol: UDP
            - name: stun
              containerPort: 3478
              protocol: UDP
          securityContext:
            capabilities:
              add:
                - SETFCAP
          livenessProbe:
            httpGet:
              path: /status
              port: https-gui
              scheme: HTTPS
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /status
              port: https-gui
              scheme: HTTPS
            initialDelaySeconds: 15
          volumeMounts:
            - mountPath: /unifi/data
              name: unifi-data
              subPath: data
            - mountPath: /unifi/log
              name: unifi-data
              subPath: log
            - mountPath: /unifi/cert
              name: unifi-data
              subPath: cert
            - mountPath: /unifi/init.d
              name: unifi-data
              subPath: init.d
          resources:
            {}
            
      volumes:
        - name: unifi-data
          persistentVolumeClaim:
            claimName: unifi

---
# Source: unifi/templates/ingress.yaml


---
# Source: unifi/templates/unified-svc.yaml
