unifi/ing_unifi.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: unifi
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: unifi.tellus.space
    http:
      paths:
      - path: /
        backend:
          serviceName: unifi-gui
          servicePort: 8443
